--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongodb": "^6.18.0",
     "mongoose": "^8.18.0",
     "multer": "^2.0.2",
+    "nanoid": "^5.1.5",
     "react": "^19.1.1"
   },
   "devDependencies": {
