--- a/Frontend/StudyApp/package.json
+++ b/Frontend/StudyApp/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "autoprefixer": "^10.4.21",
     "axios": "^1.11.0",
+    "axios-retry": "^4.5.0",
     "framer-motion": "^12.23.22",
     "postcss": "^8.5.6",
     "react": "^19.1.1",
